update the information about me in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="jumbotron text-center">
       <img src="img/pp2.jpg" alt="Gina Cahya" width="200" class="rounded-circle" />
       <h1 class="display-4">Gina Cahya Utami</h1>
-      <p class="lead">Final Year Informatics Student | Machine Learning and Data Enthusiast | Bangkit Academy 2022 Graduate</p>
+      <p class="lead">Bachelor of Informatics | Front-End Web Dev. and Machine Learning Enthusiast | Bangkit Academy 2022 Graduate</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#e2edff"
@@ -69,7 +69,7 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>I am a final year Informatics student, passionate about data and machine learning. I have consistently learned about this role since the fourth semester. Graduated from Kampus Merdeka - Studi Independen Dicoding 2021 and Bangkit Academy 2022, both in machine learning major.</p>
+            <p>I am a Bachelor of Informatics student, passionate about Front-End Web Development and machine learning. Graduated from Kampus Merdeka - Studi Independen Dicoding 2021 and Bangkit Academy 2022.</p>
           </div>
           <div class="col-md-4">
             <p>I was an Assistant Laboratory and also have some experience in organization, used to work in a team as general treasurer who managed financial management.</p>
