--- a/making-some-changes/index.html
+++ b/making-some-changes/index.html
@@ -23,7 +23,7 @@
                 <a class="nav-link" href="#">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Contact</a>
+                <a class="nav-link" aria-disabled="true">Contact</a>
               </li>
             </ul>
           </div>
