making banner in the right section that contains tittle, p, and button to download cv

--- a/making-some-changes/index.html
+++ b/making-some-changes/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a>
@@ -29,6 +30,29 @@
           </div>
         </div>
       </nav>
+
+    <!-- BANNER SECTION -->
+    <section id="banner">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h1>Hi, I'm Gina</h1>
+            <br>
+            <p>I love working on the <strong>front-end of the web</strong>. This is my site, where I share my projects.</p>
+            <br>
+            <p>You can reach out to me if you need any help in making a website for you or your business.</p>
+            <br>
+            <br>
+            <a class="cv" href="projects.html">Download CV ></a>
+
+          </div>
+          
+          <div class="col-md-6">
+
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="script.js"></script>
