add banner image

--- a/making-some-changes/index.html
+++ b/making-some-changes/index.html
@@ -47,8 +47,8 @@
 
           </div>
           
-          <div class="col-md-6">
-
+          <div class="col-md-6 text-center">
+            <img src="img/banner.png" alt="banner">
           </div>
         </div>
       </div>
