--- a/making-some-changes/index.html
+++ b/making-some-changes/index.html
@@ -6,6 +6,7 @@
     <title>Personal web v2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/logo.png">
   </head>
   <body>
     <!-- NAVBAR -->
@@ -35,6 +36,10 @@
     <section id="banner">
       <div class="container">
         <div class="row">
+          <div class="col-md-6 text-center">
+            <img src="img/banner.png" alt="banner">
+          </div>
+
           <div class="col-md-6">
             <h1>Hi, I'm Gina</h1>
             <br>
@@ -43,13 +48,18 @@
             <p>You can reach out to me if you need any help in making a website for you or your business.</p>
             <br>
             <br>
-            <a class="cv" href="projects.html">Download CV ></a>
+            <a class="cv" href="https://drive.google.com/file/d/1jN4LC2y6C2ziDjVaoFrVhBJlmnZK1egB/view?usp=sharing" target="_blank">Download CV ></a>
+          </div>
+        </div>
+      </div>
+    </section>
 
-          </div>
-          
-          <div class="col-md-6 text-center">
-            <img src="img/banner.png" alt="banner">
-          </div>
+    <!-- SKILL SECTION -->
+
+    <section id="skil">
+      <div class="container">
+        <div class="row">
+
         </div>
       </div>
     </section>
