create skill section

--- a/making-some-changes/index.html
+++ b/making-some-changes/index.html
@@ -61,15 +61,57 @@
     <section id="skill">
       <div class="container">
         <h1>My Skillsets</h1>
-        <div class="row">
-          <h2>Website Development Skills</h2>
-          
+        <div class="row" id="webdev">
+          <h2><span>Website Development Skills</span></h2>
+          <div class="col">
+            <div class="p-3"><img src="img/html-5.png" alt="html-5"></div>
+          </div>
+          <div class="col">
+            <div class="p-3"><img src="img/css-3.png" alt="css-3"></div>
+          </div>
+          <div class="col">
+            <div class="p-3"><img src="img/bootstrap.png" alt="bootstrap"></div>
+          </div>
+          <div class="col">
+            <div class="p-3"><img src="img/js.png" alt="javascript"></div>
+          </div>
+          <div class="col">
+            <div class="p-3"><img src="img/php.png" alt="php"></div>
+          </div>
+          <div class="col">
+            <div class="p-3"><img src="img/sql-server.png" alt="sql-server"></div>
+          </div>
+        </div>
+        <div class="row" id="ml">
+          <h2><span>Other Website Development Skills - Machine Learning</span></h2>
+          <div class="col">
+            <div class="p-3"><img src="img/python.png" alt="python"></div>
+          </div>
+          <div class="col">
+            <div class="p-3"><img src="img/tensorflow.png" alt="tensorflow"></div>
+          </div>
+          <div class="col">
+            <div class="p-3"><img src="img/Numpy.png" alt="numpy"></div>
+          </div>
+          <div class="col">
+            <div class="p-3"><img src="img/4l6ts__pandas.png" alt="pandas"></div>
+          </div>
+          <div class="col">
+            <div class="p-3"><img src="img/OpenCV-01.png" alt="opencv"></div>
+          </div>
+          <div class="col">
+            <div class="p-3"><img src="img/scikit-learn.png" alt="scikit-learn"></div>
+          </div>
         </div>
         <div class="row">
-          <h2>Website Development Skills</h2>
-        </div>
-        <div class="row">
-          <h2>Website Development Skills</h2>
+          <h2><span>Other Website Development Skills - Design</span></h2>
+          <div class="d-flex justify-content-center">
+              <div class="p-3"><img src="img/Adobe-Illustrator-CC.png" alt="Adobe-Illustrator-CC"></div>
+              <div class="p-3"><img src="img/figma.png" alt="figma"></div>
+              <div class="p-3"><img src="img/Adobe-Photoshop-CC.png" alt="Adobe-Photoshop-CC"></div>
+            </div>
+
+          </div>
         </div>
       </div>
     </section>
