add button to jump to my projects section

--- a/making-some-changes/index.html
+++ b/making-some-changes/index.html
@@ -48,7 +48,7 @@
             <p>You can reach out to me if you need any help in making a website for you or your business.</p><br>
             
             <a class="cv" href="https://drive.google.com/file/d/1jN4LC2y6C2ziDjVaoFrVhBJlmnZK1egB/view?usp=sharing" target="_blank">Download CV ></a>
-            <a class="cv" href="#skill">Let see all my skills ></a>
+            <a class="skill" href="#skill">Let see all my skills ></a>
             
           </div>
         </div>
@@ -109,10 +109,10 @@
               <div class="p-3"><img src="img/Adobe-Illustrator-CC.png" alt="Adobe-Illustrator-CC"></div>
               <div class="p-3"><img src="img/figma.png" alt="figma"></div>
               <div class="p-3"><img src="img/Adobe-Photoshop-CC.png" alt="Adobe-Photoshop-CC"></div>
-            </div>
-
           </div>
         </div>
+        <a href="projects.html">See my projects ></a>
+      </div>
       </div>
     </section>
 
