--- a/making-some-changes/contact.html
+++ b/making-some-changes/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo"></a>
@@ -30,6 +31,23 @@
         </div>
       </nav>
 
+    <!-- CONTACT SECTION -->    
+    <section id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h2>My Contact</h2><br>            
+            <p>Thank you for your interest in getting in touch!</p><br>
+            <p><strong>The best way to reach me is by email at <a href = "mailto:ginacu12@gmail.com">ginacu12@gmail.com</a></strong></p><br>
+            <p>You can find me on LinkedIn, GitHub, and Instagram. Let's connect</p>          
+          </div>
+          <div class="col-md-6 text-center">
+            <img src="img/banner.png" alt="banner">
+          </div>
+        </div>
+      </div>
+      
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="script.js"></script>
   </body>
