--- a/making-some-changes/contact.html
+++ b/making-some-changes/contact.html
@@ -6,6 +6,8 @@
     <title>Personal web v2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/logo.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   </head>
   <body>
     <!-- NAVBAR -->
@@ -38,8 +40,9 @@
           <div class="col-md-6">
             <h2>My Contact</h2><br>            
             <p>Thank you for your interest in getting in touch!</p><br>
-            <p><strong>The best way to reach me is by email at <a href = "mailto:ginacu12@gmail.com">ginacu12@gmail.com</a></strong></p><br>
-            <p>You can find me on LinkedIn, GitHub, and Instagram. Let's connect</p>          
+            <p><strong>The best way to reach me is by email at <a href = "mailto:ginacu12@gmail.com" target="_blank">ginacu12@gmail.com</a></strong></p><br>
+            <p>You can find me on <a href="http://www.linkedin.com/in/gina-cahya-utami/" target="_blank">LinkedIn <i class="fa-brands fa-linkedin"></i></a>, <a href="https://github.com/ginacu" target="_blank">GitHub <i class="fa-brands fa-github"></i></a>, and <a href="https://www.instagram.com/ginacu17/" target="_blank">Instagram <i class="fa-brands fa-instagram"></i></a>. Let's connect!</p>   
+                   
           </div>
           <div class="col-md-6 text-center">
             <img src="img/banner.png" alt="banner">
