--- a/making-some-changes/projects.html
+++ b/making-some-changes/projects.html
@@ -6,6 +6,7 @@
     <title>Personal web v2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/logo.png">
   </head>
   <body>
     <!-- NAVBAR -->
