--- a/making-some-changes/contact.html
+++ b/making-some-changes/contact.html
@@ -45,7 +45,7 @@
                    
           </div>
           <div class="col-md-6 text-center">
-            <img src="img/banner.png" alt="banner">
+            <img src="img/contact-img.png" alt="contact-image">
           </div>
         </div>
       </div>
