add button to jump to contact section and edit all of the button so we can just call the id button

--- a/making-some-changes/contact.html
+++ b/making-some-changes/contact.html
@@ -41,7 +41,8 @@
             <h2>My Contact</h2><br>            
             <p>Thank you for your interest in getting in touch!</p><br>
             <p><strong>The best way to reach me is by email at <a href = "mailto:ginacu12@gmail.com" target="_blank">ginacu12@gmail.com</a></strong></p><br>
-            <p>You can find me on <a href="http://www.linkedin.com/in/gina-cahya-utami/" target="_blank">LinkedIn <i class="fa-brands fa-linkedin"></i></a>, <a href="https://github.com/ginacu" target="_blank">GitHub <i class="fa-brands fa-github"></i></a>, and <a href="https://www.instagram.com/ginacu17/" target="_blank">Instagram <i class="fa-brands fa-instagram"></i></a>. Let's connect!</p>   
+            <p>You can find me on <a href="http://www.linkedin.com/in/gina-cahya-utami/" target="_blank">LinkedIn <i class="fa-brands fa-linkedin"></i></a>, <a href="https://github.com/ginacu" target="_blank">GitHub <i class="fa-brands fa-github"></i></a>, and <a href="https://www.instagram.com/ginacu17/" target="_blank">Instagram <i class="fa-brands fa-instagram"></i></a>. Let's connect!</p><br><br>
+            <a id="button" href="https://drive.google.com/file/d/1jN4LC2y6C2ziDjVaoFrVhBJlmnZK1egB/view?usp=sharing" target="_blank">Download my CV ></a>
                    
           </div>
           <div class="col-md-6 text-center">
