add button open web and documentation below the lightbox and edit border and radius around the lightbox

--- a/making-some-changes/projects.html
+++ b/making-some-changes/projects.html
@@ -40,13 +40,14 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 mb-3">
-            <a href="img/project/suitgames.JPG" data-lightbox="mygallery" data-title="Caption Here"><img src="img/project/suitgames.JPG" alt="" class="img-fluid"></a>
+            <a href="img/project/suitgames.JPG" data-lightbox="myproject" data-title="Caption Here">
+              <img src="img/project/suitgames.JPG" alt="" class="img-fluid"><br><br>
+              <a id="button2" href="contact.html">Open This Project ></a>
+              <a id="button2" href="contact.html">Open Documentation ></a>
+            </a>
           </div>
         </div>
       </div>
-
-      <br><br>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptatem repellendus quas incidunt quos veniam doloremque vitae nisi explicabo sapiente. A voluptates labore doloremque doloribus ipsum. Temporibus iusto quam qui vel, voluptas dignissimos. Est aut enim unde ullam sequi assumenda impedit alias eius repellat. Nostrum vero modi labore ex eius eum quod pariatur quibusdam minus! Sequi tempora, delectus commodi nulla soluta vero, et ipsum nesciunt ipsam molestias facere alias ea repellat quasi sed quibusdam! Inventore delectus impedit voluptate quidem earum laborum dolor similique unde eligendi debitis? Reprehenderit nihil explicabo optio doloribus, tempore placeat eos vero sunt id, mollitia quisquam? Earum autem atque deserunt quae, provident laborum, hic nulla sint ex nisi suscipit quisquam. Recusandae eaque itaque, voluptatibus nostrum nulla labore soluta quas, similique nemo dolores repellat veritatis earum. Sit deleniti earum soluta qui rem id atque esse repellendus aliquam architecto nobis error labore voluptatem corrupti fugiat totam amet magni, non facilis. Facilis culpa accusamus, corrupti totam unde fuga illo maxime, dolorem in dolor tempora cum. Incidunt porro necessitatibus rem alias error id ad temporibus, eum tenetur, aut iure enim ex nesciunt excepturi deleniti placeat. Assumenda voluptates, delectus, sint ipsam iste tenetur nemo quaerat, dolor voluptas maxime nulla praesentium totam facilis!
       <br><br>
       <div>
         <a id="button" href="contact.html">Let see how to contact me ></a>
