--- a/making-some-changes/projects.html
+++ b/making-some-changes/projects.html
@@ -38,7 +38,7 @@
       <h2>My Projects</h2><br>
 
       <div class="container">
-        <div class="row">
+        <div class="row" id="project-list">
           <div class="col-lg-6 mb-3">
             <a href="img/project/suitgames.JPG" data-lightbox="myproject" data-title="Caption Here">
               <img src="img/project/suitgames.JPG" alt="" class="img-fluid"><br><br>
@@ -53,7 +53,7 @@
         <a id="button" href="contact.html">Let see how to contact me ></a>
       </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script><script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <script src="lightbox-plus-jquery.min.js"></script>
   </body>
