successfully add logic to sort of category of #project-list

--- a/making-some-changes/projects.html
+++ b/making-some-changes/projects.html
@@ -50,10 +50,10 @@
                   <a class="nav-link active-sort" aria-current="page" href="#">All</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link website" href="#">Web Project</a>
+                  <a class="nav-link website" href="#">Website</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link design" href="#">Design Project</a>
+                  <a class="nav-link design" href="#">Design</a>
                 </li>
               </ul>
             </div>
