--- a/making-some-changes/projects.html
+++ b/making-some-changes/projects.html
@@ -41,10 +41,10 @@
       <div class="container" id="sort-category">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent2" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse text-center justify-content-center" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse text-center justify-content-center" id="navbarSupportedContent2">
               <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
                   <a class="nav-link active-sort" aria-current="page" href="#">All</a>
