--- a/making-some-changes/projects.html
+++ b/making-some-changes/projects.html
@@ -38,8 +38,8 @@
     <!-- PROJECTS SECTION -->
     <section id="projects">
       <h2>My Projects</h2><br>
-      <div class="container" id="sort-category">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="sort-category">
           <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent2" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
