--- a/making-some-changes/projects.html
+++ b/making-some-changes/projects.html
@@ -59,13 +59,13 @@
             </div>
           </div>
         </nav>
-        <div class="row" id="project-list">
+        <div class="row justify-content-center" id="project-list">
           
         </div>
-      </div>
-      <br><br>
-      <div>
+        <br><br>
         <a id="button" href="contact.html">Let see how to contact me ></a>
+      </div>
+      <div>
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script><script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
