--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0 px-2">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="index.html">About</a>
+                  <a class="nav-link" aria-current="page" href="index.html" id="about">About</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="projects.html">Projects</a>
