--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <section id="banner">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 text-center">
+          <div class="col-md-6 text-center" id="left-banner">
             <img src="img/banner.png" alt="banner">
           </div>
 
-          <div class="col-md-6">
-            <h1>Hi, I'm Gina</h1><br>
+          <div class="col-md-6" id="right-banner">
+            <h1>Hi, I'm Gina.</h1><br>
             
             <p>I love working on the <strong>front-end of the web</strong>. This is my site, where I share my projects.</p><br>
             
