making banner section more responsive

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="banner">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 text-center" id="left-banner">
+          <div class="col-md-6 text-center" id="first-img">
             <img src="img/banner.png" alt="banner">
           </div>
 
@@ -51,7 +51,10 @@
             
             <a id="button" class="cv" href="https://drive.google.com/file/d/1jN4LC2y6C2ziDjVaoFrVhBJlmnZK1egB/view?usp=sharing" target="_blank">Download CV ></a>
             <a id="button" class="skill" href="#skill">Let see all my skills ></a>
-            
+          </div>
+
+          <div class="col-md-6 text-center" id="second-img">
+            <img src="img/banner.png" alt="banner">
           </div>
         </div>
       </div>
